syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

package net.proto;

option java_multiple_files = true;
option java_package = "dev.proto";

message PaginationRequest {
  int32 page = 1;
  int32 size = 2;
  string sortBy = 3;
  string sortDir = 4;
}

